# Notify

backend/: .gitignore  pyproject.toml
backend/api/: app.py  jwt_verifier.py  web_socket_manager.py
backend/chat/: chat.py  query_transformer.py
backend/db/: crud.py  database.py  models.py
backend/document_processor/: upload_handler.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[chatId]/: page.tsx
frontend/app/chat/[sessionId]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/custom/: message_input.tsx  navbar.tsx  sidebar.tsx
